manifests/pod-webhook-mutator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-webhook-mutator
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: pod-webhook-mutator
