manifests/pod-mutating-webhook-mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-mutating-webhook
webhooks:
  - name: pod-webhook-mutator.kuberntes.io
    clientConfig:
      service:
        name: pod-webhook-mutator
        namespace: default
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0RENDQXNpZ0F3SUJBZ0lVR3FFTEZTTnRLZkgyM0hyZmV6bWV1Ti80WUI4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tqRW9NQ1lHQTFVRUF3d2ZTM1ZpWlhKdVpYUmxjeUJCWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2pBZQpGdzB5TlRBek1ESXdPVE13TURoYUZ3MHlOakF6TURJd09UTXdNRGhhTUI0eEhEQWFCZ05WQkFNTUUzQnZaQzEzClpXSm9iMjlyTFcxMWRHRjBiM0l3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRDgKeGtjMWhNbVdCTUd4Z04zbzhVNFU2YmorVVcwZk5mSHBsTjNyQ1graDJIaVhJTzljK09oK3pvTUVleTNKMjJLNQpEWFh1eHpaWCtY [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 30
    objectSelector: # Very important to restrict the webhook to mutate the only pods with the label
      matchLabels:
        pod-mutating-webhook-enabled: "true"
